# SignalFox

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
docs/: ROADMAP.md
docs/i18n/: README.ja.md  README.ko.md  README.yue.md  README.zh-CN.md  README.zh-TW.md
src/signalfox/: __init__.py  cli.py  config.py  fetch.py  models.py  pipeline.py  storage.py
tests/: __init__.py  test_cli.py  test_fetch.py  test_pipeline.py  test_storage.py
